syntax = "proto3";

package middleware;

message JwtRequest {
  string token = 1;
}

message JwtResponse { 
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string authorized = 4;
    string exp = 5;
}

service JwtService {
  rpc JwtService(JwtRequest) returns (JwtResponse) {}
}

